# drf-async-view

./: .flake8  LICENSE  README.md  pyproject.toml  pytest.ini
drfasyncview/: __init__.py  requests.py  views.py
tests/: conftest.py  settings.py  utils.py
tests/requests/: test_async_request.py
tests/views/: test_async_api_view.py  test_async_api_view_check_permission.py  test_async_api_view_check_throttle.py
